--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
 	},
 	"devDependencies": {
 		"@types/bun": "latest",
-		"@types/node-cron": "^3.0.11"
+		"@types/node-cron": "^3.0.11",
+		"openapi-typescript": "^7.6.1"
 	},
 	"peerDependencies": {
 		"typescript": "^5"
