--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
 	},
 	"devDependencies": {
 		"@types/bun": "latest",
-		"@types/node-cron": "^3.0.11",
-		"openapi-typescript": "^7.6.1"
+		"@types/node-cron": "^3.0.11"
 	},
 	"peerDependencies": {
 		"typescript": "^5"
