--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 	},
 	"dependencies": {
 		"fuzzysort": "^3.1.0",
+		"keyv": "^5.3.3",
 		"log4js": "^6.9.1",
 		"node-cron": "^3.0.3",
 		"prismarine-nbt": "^2.7.0",
