--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 	"scripts": {
 		"start": "bun ./src/index.ts",
 		"test": "bun test",
-		"format": "bunx prettier --write ."
+		"format": "bunx prettier --write .",
+		"update-test-data": "bun ./src/scripts/update-neu-items.ts"
 	},
 	"devDependencies": {
 		"@types/bun": "latest",
@@ -16,6 +17,7 @@
 		"typescript": "^5"
 	},
 	"dependencies": {
+		"chalk": "^5.4.1",
 		"fuzzysort": "^3.1.0",
 		"keyv": "^5.3.3",
 		"log4js": "^6.9.1",
